// Copyright 2024 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.account;
option go_package = "github.com/bucketeer-io/bucketeer/proto/account";

message SearchFilter {
  string id = 1;
  string name = 2;
  string query = 3;
  FilterTargetType filter_target_type = 4;
  string environment_id = 5;
  bool default_filter = 6;
}

enum FilterTargetType {
  UNKNOWN = 0;
  FEATURE_FLAG = 1;
}
